<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="389dp"
            android:layout_height="54dp"
            android:text="Please Enter Your Information" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="380dp"
            android:layout_height="101dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="390dp"
            android:layout_height="89dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="383dp"
            android:layout_height="91dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="385dp"
            android:layout_height="118dp"
            android:text="@string/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>